finished the styling and layout of the landing page

--- a/index.html
+++ b/index.html
@@ -3,11 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <script src="javascript.js" defer></script>
-    <title>Document</title>
+    <title>Bloom Booking Landing Page</title>
 </head>
 <body>
+    <header class="header">
+        <h2 class="header-logo">bloombooking</h2>
+    </header>    
+    <div class="container">
+        <div class="content">
+        <h1>Your clients. Your business. Your way.</h1>
+        <p> We believe the cost of running your business should be predictable and transparent, allowing you to focus on delivering excellent customer service. 
+            <br>
+            <br>
+            Which is why we are looking to create you a client booking system with no transaction fees and a flat rate.
+            <br>
+            <br>
+            Sign up to be on the waiting list for a new system that allows you to manage your clients and your business with no transaction fees.</p>
+            <img src="./images/Content-Image.jpeg">
+        </div>
+        <div class="form-container">
+            <h3>Join the Waiting List</h3>
+            <div class="form">
+                <label for="fname" class="required" style="margin-bottom: 10px; font-size:14px">First name:</label>
+                    <input type="text" id="fname" name="fname">
+                <label for="lname" class="required" style="margin-bottom: 10px; margin-top: 10px; font-size:14px">Last name:</label>
+                    <input type="text" id="lname" name="lname">
+                <label for="email" class="required" style="margin-bottom: 10px; margin-top: 10px;font-size:14px">Email:</label>
+                    <input type="email" id="email" name="email">
+                <label for="business" style="margin-bottom: 10px; margin-top: 10px; font-size:14px">Business Name:</label>
+                    <input type="text" id="business" name="business">
+                <label for="specialism" class="required" style="margin-bottom: 10px; margin-top: 10px; font-size:14px;">What do you specialise in?</label>
+                    <select id="specialism" name="specialism" style="height:30px; border-radius: 5px; border-style:solid; border-color:darkgrey; border-width:2px" >
+                        <option value="haridressing">Hairdressing</option>
+                        <option value="nails">Nails</option>
+                        <option value="massage">Massage</option>
+                        <option value="brows">Brows</option>
+                    </select>
+                <label for="business-type" style="margin-bottom: 10px; margin-top: 10px; font-size:14px;">Do you work for yourself or do you employ staff?</label>
+                    <select id="business-type" name="business-type" style="height:30px; border-radius: 5px; border-style:solid; border-color:darkgrey; border-width:2px" >
+                        <option value="myself">Myself</option>
+                        <option value="employ-staff">Employ Staff</option>
+                    </select>
+                <button>Join the Waiting List</button>
+            </div>
+            <p>*Your details will not be used for any other purpose than to gauge interest and won't be shared with any third party</p>
+        </div>
+    </div>
     
 </body>
 </html>
