removed transaction fees and changed fillers to aesthetics

--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
             <br><br><i>
             No more hidden costs.
             <br><br>
-            No more transaction fees.
-            <br><br>
             No more surprises.
             </i><br><br>
             Spend less time worrying about admin and more time delivering exceptional customer service. With predictable pricing, you can budget with confidence and focus on growing your business.
@@ -64,7 +62,7 @@
                             <option value="massage">Massage</option>
                             <option value="brows-and-lashes">Brows and Lashes</option>
                             <option value="tattoo-and-piercing">Tattoo and Piercing</option>
-                            <option value="fillers">Fillers</option>
+                            <option value="aesthetics">Aesthetics</option>
                             <option value="facials-and-skincare">Facials and Skincare</option>
                             <option value="barbering">Barbering</option>
                             <option value="personal-training">Personal Training</option>
